feat(user): [MEX-391] change logic to get ENT users